# CineScope

./: README.md
backend/: create_tables.py  pom.xml  pyproject.toml  requirements.txt
backend/core/: router.py  server.py  settings.py  template.html
backend/core/authentication/: authentication.py  permissions.py
backend/core/handlers/: base_handler.py
backend/database/: database_service.py
backend/database/scripts/: CREATE_TABLES_CINESCOPE.sql  INSERT_DATA_CINESCOPE.sql
backend/docs/api-client/: health.bru  read_root.bru
backend/docs/api-client/actor/: delete-actor.bru  delete_actor.bru  get-actors.bru  get_actors.bru  health.bru  patch-actor.bru  patch_actor.bru  post-actor.bru  post_actor.bru
backend/docs/api-client/auth/: health.bru  login.bru  register.bru
backend/docs/api-client/director/: delete-director.bru  delete_director.bru  get-director.bru  get_director.bru  health.bru  patch-actor.bru  patch_director.bru  post-director.bru  post_director.bru
backend/docs/api-client/genre/: delete-genre.bru  delete_genre.bru  get-genre.bru  get_genre.bru  health.bru  patch_genre.bru  post-genre.bru  post_genre.bru
backend/docs/api-client/movie/: delete-movie.bru  delete_movie.bru  get-movie.bru  get_movie.bru  health.bru  patch-movie.bru  patch_movie.bru  post-movie.bru  post_movie.bru
backend/docs/api-client/request/: approve-request.bru  delete-request-by-current-user.bru  delete-request.bru  folder.bru  get-request.bru  get-requests-by-current-user.bru  get-requests-by-user-id.bru  get_request.bru  health.bru  post-request.bru  reject-request.bru
backend/docs/api-client/review/: delete-by-current-user.bru  delete-review.bru  (+7 more)
backend/documentation/: read_root.bru
backend/documentation/actor/: delete_actor.bru  folder.bru  folder.yml  get_actor.bru  patch_actor.bru  post_actor.bru
backend/documentation/auth/: create_acess_token.bru  folder.bru
backend/documentation/director/: delete_director.bru  folder.bru  get_director.bru  get_director.yml  get_directors.yml  patch_director.bru  post_director.bru
backend/documentation/genre/: delete_genre.bru  get_genre.bru  patch_genre.bru  post_genre.bru
backend/documentation/genres/: get_genre.yml
backend/documentation/movie/: folder.bru  get_movie.bru  patch_movie.bru  post_movie.bru
backend/documentation/request/: folder.bru  get_request.bru
backend/documentation/review/: folder.bru  http---localhost-8000-api-reviews.bru  post_review.bru
backend/documentation/user/: delete_user.bru  get_user.bru  get_users.yml  post_user.bru
backend/filters/: actor_filters.py  movie_filters.py
backend/http-server/documentation/: bruno.json
backend/http-server/tests/: conftest.py
backend/spring-boot/: docker-compose.yml  pom.xml
backend/spring-boot/documentation/: opencollection.yml
backend/src/: all_models.py  app.py
backend/src/cinescope/: all_models.py  app.py
backend/tests/: conftest.py  test_actor.py  test_read_root.py
backend/views/: actors_view.py  auth_view.py  director_view.py  exemple.py  genres_views.py  movies_view.py  request_view.py  reviews_view.py
(+440 files in other folders)
